src/objects/Print_Issue__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Custom_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, allows user to enter any name they choose.  When unchecked, the system will name the object</inlineHelpText>
        <label>Allow Custom Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>As_Seen_On_Pages_Icon_Appear_Online__c</fullName>
        <label>As Seen On Pages &amp; Icon Appear Online</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Available_for_Sale__c</fullName>
        <formula>AND(TODAY() &gt;= Selling_Start_Date__c, TODAY() &lt;= Selling_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Edition</label>
        <referenceTo>Edition__c</referenceTo>
        <relationshipLabel>Print Issues</relationshipLabel>
        <relationshipName>Print_Issues</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Circulation__c</fullName>
        <description>Add new field “Gross Circulation” to Salesforce Print Issue to capture ces.Publication.GrossCirc values. For existing records, populate values from CIS. Ref. SF-1811</description>
        <label>Gross Circulation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Print Issues (Next Issue)</relationshipLabel>
        <relationshipName>Print_Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Print Issues</relationshipLabel>
        <relationshipName>Print_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Years_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Year&apos;s Issue</label>
        <referenceTo>Print_Issue__c</referenceTo>
        <relationshipLabel>Print Issues (Previous Year&apos;s Issue)</relationshipLabel>
        <relationshipName>Print_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Print Market</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only select Active Markets</errorMessage>
            <filterItems>
                <field>Market__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Print Issues</relationshipLabel>
        <relationshipName>Print_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_ID_Number__c</fullName>
        <description>Auto Number to fill in the Publication external Id for Existing CES publication Id&apos;s. Ref. SF-2076</description>
        <displayFormat>{0000}</displayFormat>
        <label>Publication ID Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Publication_Id_External_ID__c</fullName>
        <description>Publication Id for Existing CES publication Id&apos;s. Ref. SF-2076</description>
        <externalId>true</externalId>
        <label>Publication Id External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publish_1st_Cover_Ship__c</fullName>
        <label>Publish/1st Cover Ship</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>PRNT-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Selling_End_Date__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate an end date</inlineHelpText>
        <label>Selling End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Start_Date__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate a start date</inlineHelpText>
        <label>Selling Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_1__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate</inlineHelpText>
        <label>Step 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Step_2__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate</inlineHelpText>
        <label>Step 2 Contracts/Non-CR Ads</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Step_3__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate</inlineHelpText>
        <label>Step 3 Contracts/CR Ads</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Cover_Display_Until__c</fullName>
        <label>1st Cover Display Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Cover_On_Sale__c</fullName>
        <label>1st Cover On-Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Cover_Display_Until__c</fullName>
        <label>2nd Cover Display Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Cover_On_Sale__c</fullName>
        <inlineHelpText>Leave blank to have the system automatically calculate</inlineHelpText>
        <label>2nd Cover On-Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Cover_Ship__c</fullName>
        <label>2nd Cover Ship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Cover_Display_Until__c</fullName>
        <label>3rd Cover Display Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Cover_On_Sale__c</fullName>
        <label>3rd Cover On-Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Cover_Ship__c</fullName>
        <label>3rd Cover Ship</label>
        <type>Date</type>
    </fields>
    <label>Print Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Short_Name__c</columns>
        <columns>Edition__c</columns>
        <columns>Print_Market__c</columns>
        <columns>X1st_Cover_On_Sale__c</columns>
        <columns>Publish_1st_Cover_Ship__c</columns>
        <columns>Selling_Start_Date__c</columns>
        <columns>Selling_End_Date__c</columns>
        <columns>Available_for_Sale__c</columns>
        <columns>Previous_Issue__c</columns>
        <columns>Previous_Years_Issue__c</columns>
        <columns>Next_Issue__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Gross_Circulation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Print Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>